Add internal categories endpoint
